# netpipefs

./: .gitignore  CMakeLists.txt  README.md  bench-read-nopt.txt  bench-read.txt  bench-read8192.txt  bench-read_incr_bs.txt  bench-read_incr_count.txt  bench-write-opt.txt  bench-write.txt  bench-write8192.txt  bench-write_incr_bs.txt  bench-write_incr_count.txt  bench.sh  bench_read.txt  bench_write.txt  makefile  notes.txt  questions.txt
benchmarks/Increasing block size/namedpipe/: bench-read.txt  bench-write.txt  bench_read.txt
benchmarks/Increasing block size/netcat/: bench-write-1gb.txt
benchmarks/Increasing block size/netpipe/: bench-read.txt  bench-write.txt  bench_write.txt
benchmarks/Increasing block size/netpipe-nopt/: bench-read.txt  bench-write.txt
benchmarks/Increasing block size/netpipe-opt/: bench-read.txt  bench-write.txt
benchmarks/Increasing block size/netpipe-writeahead/: bench-read.txt  bench-write.txt
benchmarks/Increasing count/: bench-read.txt  bench-write.txt
benchmarks/Increasing count/local/: bench-read.txt  bench-write.txt
benchmarks/Increasing count/namedpipe/: bench-write.txt
benchmarks/Increasing count/netpipe-writeahead/: bench-read.txt  bench-write.txt
benchmarks/namedpipe/: local.txt  local_notebook.txt
benchmarks/netpipe/: local.txt  local_nofifolist.txt  local_notebook.txt  network.txt
benchmarks/old/Increasing block size/local/: bench-read.txt  bench-write.txt
benchmarks/old/Increasing block size/namedpipe/: bench_write.txt
benchmarks/old/Increasing block size/netcat/: bench-write.txt
benchmarks/old/Increasing block size/netpipe/: bench_read.txt  network_write.txt
benchmarks/old/Increasing block size/netpipe-nofifolist/: bench-write.txt
benchmarks/old/Increasing count/namedpipe/: bench-read.txt
examples/: benchmark.c  ddsel.c  nonblockingio.c  select.c  simpleprodcons.c  variabledata.c
include/: cbuf.h  dispatcher.h  fspipe_file.h  icl_hash.h  netpipe.h  netpipefs_file.h  netpipefs_socket.h  openfiles.h  options.h  scfiles.h  signal_handler.h  sock.h  socketconn.h  utils.h
learningfuse/: CMakeLists.txt  makefile  questions.txt
learningfuse/include/: utils.h
old/: .gitignore  makefile
old/include/: dispatcher.h  netpipe.h  utils.h
old/src/: icl_hash.c  main.c  netpipe.c  utils.c
scripts/: bench_bs.sh  bench_bs_namedpipe.sh  bench_bs_netcat.sh  bench_bs_netpipe.sh  bench_bs_netpipe_MPMC.sh  bench_bs_netpipe_networkwrite.sh  bench_bs_netpipe_read.sh  bench_bs_netpipe_write.sh  bench_count.sh  bench_count_namedpipe.sh  bench_count_netpipe.sh  bench_local.sh  bench_networkread.sh  bench_networkwrite.sh
src/: cbuf.c  dispatcher.c  fscons.c  fspipe_file.c  fsprod.c  learningmain.c  main.c  netpipe.c  netpipefs_file.c  netpipefs_socket.c  openfiles.c  options.c  signal_handler.c  sock.c  socketconn.c  utils.c
test/: cbuf.test.c  fspipe.test.c  netpipe.test.c  openfiles.test.c  testutilities.h  utils.test.c
